# fastapi-tutorials-unicorndevelopers

./: README.md  requirements.txt
01introduction/: README.md
02helloworld/: README.md  pyproject.toml
02helloworld/src/: main.py
02helloworld/src/02helloworld/: __init__.py
03fastapidetails/: pyproject.toml
03fastapidetails/src/03fastapidetails/: __init__.py
03fastapidetails/src/03fastapidetails/01helloworld/: README.md
03fastapidetails/src/03fastapidetails/02pathparameters/: README.md
03fastapidetails/src/03fastapidetails/03pathparameterswithtypes/: README.md
03fastapidetails/src/03fastapidetails/04ordersmatter/: 04ordersmatter.py  README.md
03fastapidetails/src/03fastapidetails/05queryparameters/: 05queryparameters.py  README.md
03fastapidetails/src/03fastapidetails/06requestbody/: 06requestbody.py  README.md
03fastapidetails/src/03fastapidetails/07queryvalidation/: 07queryvalidation.py  README.md
03fastapidetails/src/03fastapidetails/08pathvalidation/: 08pathvalidation.py  README.md
03fastapidetails/src/03fastapidetails/09bodyvalidation/: 09bodyvalidation.py  README.md
03fastapidetails/src/03fastapidetails/10responsemodels/: 10responsemodels.py  README.md
03fastapidetails/src/03fastapidetails/11formfiles/: 11formfiles.py  README.md
03fastapidetails/src/03fastapidetails/12dependencies/: 12dependencies.py  README.md
03fastapidetails/src/03fastapidetails/13cookieparameters/: README.md
03fastapidetails/src/03fastapidetails/13security/: 13security.py  README.md
03fastapidetails/src/03fastapidetails/14database/: 14database.py  README.md
(+36 files in other folders)
